Workaround java9 CoverageTest error.
Change-Id: I5239ce63a5f3574618f8f5e1cfaebebbeb99365d